cmake_minimum_required(VERSION 3.21)
project(Technical_Training_II_DSA_Lab_Work)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Technical_Training_II_DSA_Lab_Work
        TT_Exp_3_Flattening_Mlutilevel_Doubly_Linked_List.cpp
        TT_Exp_3_Flattening_Mlutilevel_Doubly_Linked_List.h)
